--- a/Основы программирования/Задания/Конвертер валют.html
+++ b/Основы программирования/Задания/Конвертер валют.html
@@ -5,8 +5,8 @@
 		var euro = 75;
 
 		var operation = parseInt(prompt("Сколько рублей Вы хотите сконвертировать?"));
-		var totalDollar = alert(operation / dollar);
-		var totalEuro = alert(operation / euro);
+		var total = alert("Рублей в долларах: " + operation / dollar + "\n" + "Рублей в евро: " + operation / euro);
+
 
 
 </script>
