--- a/Основы программирования/Урок 2/1.html
+++ b/Основы программирования/Урок 2/1.html
@@ -2,9 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
+    <script type="text/javascript">
+
+        var a = +prompt("First number");
+        var b = +prompt("Second number");
+
+        max = a;
+        if(a < b) {
+            max = b;
+        }
+
+        alert(max);
+
+<!--        if(a > b){-->
+<!--            var max = a;-->
+<!--            alert(max);-->
+<!--        } else if(a == b) {-->
+<!--            alert("Числа равны");-->
+<!--        }-->
+<!--        else {-->
+<!--            max = b;-->
+<!--            alert(max);-->
+<!--        }-->
+
+
+
+
+    </script>
 </head>
 <body>
-$END$
+
 </body>
 </html>
