--- a/Основы программирования/Урок 2/2.html
+++ b/Основы программирования/Урок 2/2.html
@@ -2,9 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
+    <script type="text/javascript">
+
+        for(var i = 0; i < 1000; i++){
+            document.write("Hello! <br>");
+        }
+<!--        var i = 0-->
+<!--        while(i < 5) {-->
+<!--        document.write("Hello! <br>");-->
+<!--        i++;-->
+<!--        }-->
+
+
+    </script>
 </head>
 <body>
-$END$
+
 </body>
 </html>
