--- a/Основы программирования/Урок 2/3.html
+++ b/Основы программирования/Урок 2/3.html
@@ -2,9 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
+    <script type="text/javascript">
+
+
+        var sum = 0
+        do{
+            var n = +prompt("Enter number more than 0");
+        }
+        while(isNaN(n) || n < 0)
+
+
+
+            for(var i = 0; i <= n; i++){
+            sum += i;
+            document.write(sum + "<br>");
+
+            }
+    </script>
 </head>
 <body>
-$END$
+
 </body>
 </html>
