--- a/Основы программирования/Урок 2/4.html
+++ b/Основы программирования/Урок 2/4.html
@@ -7,7 +7,9 @@
 
         var answer = parseInt(Math.random()*100);
         var userAnswer = prompt("Угадайте число от 0 до 100");
-        var maxTryCount = 2
+        var maxTryCount = 2;
+
+
         for(var tryCount = 1; tryCount < maxTryCount; tryCount++){
 
             if(userAnswer == answer) {
