--- a/Основы программирования/Урок 3/5.html
+++ b/Основы программирования/Урок 3/5.html
@@ -6,17 +6,27 @@
     <script type="text/javascript">
 
         function generateText(letters, length){
-            return "фафафаф";
+            var text = "";
+            for(var i = 0; i < length; i++){
+
+                var n = getRandomNumber(letters.length - 1);
+                text = text + letters[n];
+
+            }
+            return text;
         }
+
+        function getRandomNumber(max){
+            return Math.round(Math.random() * max);
+        }
+
+
 
         alert("Вас приветствует программа по обучению слепой печати");
 
 
             while(true){
-                alert("Положите 4 пальца левой руки - мизинец, безымянный, средний и указательный - на клавиши ф, ы, в, а.");
-                Запомните, что буква А находится под вашим указательным пальцем, а Ф - под мизинцем.\n
-                Теперь неспеша набирайте текст.
-                Постарайтесь не смотреть на клавиатуру.");
+                alert("Положите 4 пальца левой руки - мизинец, безымянный, средний и указательный - на клавиши ф, ы, в, а.\nЗапомните, что буква А находится под вашим указательным пальцем, а Ф - под мизинцем. Теперь неспеша набирайте текст.\nПостарайтесь не смотреть на клавиатуру.");
 
                 var text = generateText(["ф","а"], 10);
                 var userText = prompt(text);
