--- a/HTML/Hello.html
+++ b/HTML/Hello.html
@@ -1,10 +1,43 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+          name="viewport">
+    <meta content="ie=edge" http-equiv="X-UA-Compatible">
+    <title></title>
 </head>
 <body>
-
+<h1>Мэтт Вайсфельд. Объектно-ориентированное мышление</h1>
+<hr>
+<img alt="Фотография книги" src="img/1009270202.jpg" width="200">
+<hr>
+<h3>Краткое описание</h3>
+<p>Если вы освоили структурное программирование и только начинаете интересоваться объектами — то книга, безусловно,
+    полезна. Стоит отметить, что сам автор позиционирует эту книгу, как отправную точку для изучения ООП.</p>
+<hr>
+<h3>Подробное описание:</h3>
+<p>Объектно-ориентированное программирование - это фундамент современных языков программирования, включая C++, Java, C#,
+    Visual Basic, .NET, Ruby и Objective-C. Кроме того, объекты лежат в основе многих веб-технологий, например
+    JavaScript, Python и PHP.
+    Объектно-ориентированное программирование обеспечивает правильные методики проектирования, переносимость кода и его
+    повторное использование, однако для того, чтобы все это полностью понять, необходимо изменить свое мышление.
+    Разработчики, являющиеся новичками в сфере объектно-ориентированного программирования, не должны поддаваться
+    искушению перейти непосредственно к конкретному языку программирования (например, Objective-C, VB .NET, C++, C#,
+    .NET или Java) или моделирования (например, UML), а вместо этого сначала уделить время освоению того, что автор
+    книги Мэтт Вайсфельд называет объектно-ориентированным мышлением.
+    Несмотря на то, что технологии программирования изменяются и эволюционируют с годами, объектно-ориентированные
+    концепции остаются прежними - при этом неважно, какой именно является платформа.</p>
+<hr>
+<h3>Характеристики книги</h3>
+<p><b>Название:</b> Объектно-ориентированное мышление</p>
+<p><b>Серия:</b> Библиотека программиста</p>
+<p><b>Тип:</b> Печатная книга</p>
+<p><b>Издательство:</b> Питер</p>
+<p><b>Язык издания:</b> Русский</p>
+<p><b>Год выпуска:</b> 2014</p>
+<p><b>Тип обложки:</b> Мягкая обложка</p>
+<p><b>Вес в упаковке:</b> 375г</p>
+<footer><p>&copy; <a href="https://github.com/kane52rus/Geek/tree/html/HTML">Andrey Tabunkin</a></p></footer>
 </body>
 </html>
