--- a/HTML/card1.html
+++ b/HTML/card1.html
@@ -10,7 +10,7 @@
 <body>
 <h1>Мэтт Вайсфельд. Объектно-ориентированное мышление</h1>
 <hr>
-<img alt="Фотография книги" src="img/1009270202.jpg" width="200">
+<img alt="Фотография книги" src="img/book1.jpg" width="200">
 <hr>
 <h3>Краткое описание</h3>
 <p>Если вы освоили структурное программирование и только начинаете интересоваться объектами — то книга, безусловно,
