--- a/HTML/catalog/card1.html
+++ b/HTML/catalog/card1.html
@@ -8,9 +8,11 @@
     <title></title>
 </head>
 <body>
+<a href="../index.html">Главная</a>
+<a href="../contacts.html">Контакты</a>
 <h1>Мэтт Вайсфельд. Объектно-ориентированное мышление</h1>
 <hr>
-<img alt="Фотография книги" src="img/book1.jpg" width="200">
+<img alt="Фотография книги" src="../img/book1.jpg" width="200">
 <hr>
 <h3>Краткое описание</h3>
 <p>Если вы освоили структурное программирование и только начинаете интересоваться объектами — то книга, безусловно,
