--- a/HTML/catalog/card2.html
+++ b/HTML/catalog/card2.html
@@ -8,9 +8,11 @@
     <title></title>
 </head>
 <body>
+<a href="../index.html">Главная</a>
+<a href="../contacts.html">Контакты</a>
 <h1>Бертран Мейер. Почувствуй класс</h1>
 <hr>
-<img alt="Фотография книги" src="img/book3.jpg" width="200">
+<img alt="Фотография книги" src="../img/book3.jpg" width="200">
 <hr>
 <h3>Краткое описание</h3>
 <p>Эту книгу определённо стоит прочесть каждому программисту. Но в качестве основного языка программирования для примеров был взят Эйфель, что может вызывать некоторые затруднения. </p>
