--- a/HTML/catalog/card3.html
+++ b/HTML/catalog/card3.html
@@ -8,9 +8,11 @@
     <title></title>
 </head>
 <body>
+<a href="../index.html">Главная</a>
+<a href="../contacts.html">Контакты</a>
 <h1>Гради Буч. Объектно-ориентированный анализ и проектирование с примерами приложений</h1>
 <hr>
-<img alt="Фотография книги" src="img/book1.jpg" width="200">
+<img alt="Фотография книги" src="../img/book1.jpg" width="200">
 <hr>
 <h3>Краткое описание</h3>
 <p>Книга не для начинающих, так как больше похожа на подведение итогов и теоретическое обоснование, чем практический самоучитель по объектно-ориентированному мышлению.</p>
