--- a/HTML/catalog/card3.html
+++ b/HTML/catalog/card3.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
           name="viewport">
+    <link rel="stylesheet" href="css/style.css">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <title></title>
 </head>
 <body>
-<a href="../index.html">Главная</a>
-<a href="../contacts.html">Контакты</a>
+<ul class="menu">
+    <li><a href="../index.html">Главная</a></li>
+    <li><a href="../catalog.html">Каталог</a></li>
+    <li><a href="../contacts.html">Контакты</a></li>
+</ul>
 <h1>Гради Буч. Объектно-ориентированный анализ и проектирование с примерами приложений</h1>
 <hr>
-<img alt="Фотография книги" src="../img/book1.jpg" width="200">
+<a href="../img/book1.jpg" target="_blank"><img alt="Фотография книги" src="../img/book1.jpg" width="200"></a>
 <hr>
 <h3>Краткое описание</h3>
 <p>Книга не для начинающих, так как больше похожа на подведение итогов и теоретическое обоснование, чем практический самоучитель по объектно-ориентированному мышлению.</p>
@@ -23,14 +27,17 @@
 Книга будет полезна системным аналитикам и архитекторам, программистам, преподавателям и студентам высших учебных заведений, а также всем специалистам по информационным технологиям.</p>
 <hr>
 <h3>Характеристики книги</h3>
-<p><b>Название:</b> Объектно-ориентированное мышление</p>
-<p><b>Серия:</b> -</p>
-<p><b>Тип:</b> Отельное издание</p>
-<p><b>Издательство:</b> Вильямс</p>
-<p><b>Язык издания:</b> Русский</p>
-<p><b>Год выпуска:</b> 2017</p>
-<p><b>Тип обложки:</b> Твердый переплет</p>
-<p><b>Вес в упаковке:</b> 1085г</p>
-<footer><p>&copy; <a href="https://github.com/kane52rus/Geek/tree/html/HTML">Andrey Tabunkin</a></p></footer>
+<ul>
+    <li><p><b>Название:</b> Объектно-ориентированное мышление</p></li>
+    <li><p><b>Серия:</b> -</p></li>
+    <li><p><b>Тип:</b> Отельное издание</p></li>
+    <li><p><b>Издательство:</b> Вильямс</p></li>
+    <li><p><b>Язык издания:</b> Русский</p></li>
+    <li><p><b>Год выпуска:</b> 2017</p></li>
+    <li><p><b>Тип обложки:</b> Твердый переплет</p></li>
+    <li><p><b>Вес в упаковке:</b> 1085г</p></li>
+</ul>
+<hr>
+<footer><p>Все права защищены &copy; <a href="https://github.com/kane52rus/Geek/tree/html/HTML">Andrey Tabunkin</a></p></footer>
 </body>
 </html>
