--- a/HTML/index.html
+++ b/HTML/index.html
@@ -2,11 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/style.css">
     <title>Главная страница</title>
 </head>
 <body>
-    <h1>Главная</h1>
-    <a href="contacts.html">Контакты</a>
-    <a href="catalog/card1.html">Бестселлер</a>
+    <header>
+        <ul class="menu">
+            <li><a href="#">Главная</a></li>
+            <li><a href="catalog.html">Каталог</a></li>
+            <li><a href="contacts.html">Контакты</a></li>
+        </ul>
+    </header>
+    <hr>
+    <h1>eBookShop</h1>
+    <h3>Добро пожаловать в интернет-магазин электронных книг eBookShop</h3>
+    <hr>
+    <footer><p>Все права защищены &copy; <a href="https://github.com/kane52rus/Geek/tree/html/HTML">Andrey Tabunkin</a></p></footer>
 </body>
 </html>
