--- a/HTML/catalog/card1.html
+++ b/HTML/catalog/card1.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
           name="viewport">
+    <link rel="stylesheet" href="css/style.css">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <title></title>
 </head>
 <body>
-<a href="../index.html">Главная</a>
-<a href="../contacts.html">Контакты</a>
+<ul class="menu">
+    <li><a href="../index.html">Главная</a></li>
+    <li><a href="../catalog.html">Каталог</a></li>
+    <li><a href="../contacts.html">Контакты</a></li>
+</ul>
 <h1>Мэтт Вайсфельд. Объектно-ориентированное мышление</h1>
 <hr>
-<img alt="Фотография книги" src="../img/book1.jpg" width="200">
+<a href="../img/book1.jpg" target="_blank"><img alt="Фотография книги" src="../img/book1.jpg" width="200"></a>
 <hr>
 <h3>Краткое описание</h3>
 <p>Если вы освоили структурное программирование и только начинаете интересоваться объектами — то книга, безусловно,
@@ -32,14 +36,17 @@
     концепции остаются прежними - при этом неважно, какой именно является платформа.</p>
 <hr>
 <h3>Характеристики книги</h3>
-<p><b>Название:</b> Объектно-ориентированное мышление</p>
-<p><b>Серия:</b> Библиотека программиста</p>
-<p><b>Тип:</b> Печатная книга</p>
-<p><b>Издательство:</b> Питер</p>
-<p><b>Язык издания:</b> Русский</p>
-<p><b>Год выпуска:</b> 2014</p>
-<p><b>Тип обложки:</b> Мягкая обложка</p>
-<p><b>Вес в упаковке:</b> 375г</p>
-<footer><p>&copy; <a href="https://github.com/kane52rus/Geek/tree/html/HTML">Andrey Tabunkin</a></p></footer>
+<ul>
+    <li><b>Название:</b> Объектно-ориентированное мышление</li>
+    <li><b>Серия:</b> Библиотека программиста</li>
+    <li><b>Тип:</b> Печатная книга</li>
+    <li>><b>Издательство:</b> Питер</li>
+    <li><b>Язык издания:</b> Русский</li>
+    <li><b>Год выпуска:</b> 2014</li>
+    <li><b>Тип обложки:</b> Мягкая обложка</li>
+    <li><b>Вес в упаковке:</b> 375г</li>
+</ul>
+<hr>
+    <footer><p>Все права защищены &copy; <a href="https://github.com/kane52rus/Geek/tree/html/HTML">Andrey Tabunkin</a></p></footer>
 </body>
 </html>
