--- a/HTML/catalog/card2.html
+++ b/HTML/catalog/card2.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
           name="viewport">
+    <link rel="stylesheet" href="css/style.css">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <title></title>
 </head>
 <body>
-<a href="../index.html">Главная</a>
-<a href="../contacts.html">Контакты</a>
+<ul class="menu">
+    <li><a href="../index.html">Главная</a></li>
+    <li><a href="../catalog.html">Каталог</a></li>
+    <li><a href="../contacts.html">Контакты</a></li>
+</ul>
 <h1>Бертран Мейер. Почувствуй класс</h1>
 <hr>
-<img alt="Фотография книги" src="../img/book3.jpg" width="200">
+<a href="../img/book1.jpg" target="_blank"><img alt="Фотография книги" src="../img/book3.jpg" width="200"></a>
 <hr>
 <h3>Краткое описание</h3>
 <p>Эту книгу определённо стоит прочесть каждому программисту. Но в качестве основного языка программирования для примеров был взят Эйфель, что может вызывать некоторые затруднения. </p>
@@ -23,14 +27,17 @@
 Язык Eiffel используется как рабочий язык программирования. </p>
 <hr>
 <h3>Характеристики книги</h3>
-<p><b>Название:</b> Почувствуй класс</p>
-<p><b>Серия:</b> Отдельное издание</p>
-<p><b>Тип:</b> Печатная книга</p>
-<p><b>Издательство:</b> -</p>
-<p><b>Язык издания:</b> Русский</p>
-<p><b>Год выпуска:</b> 2017</p>
-<p><b>Тип обложки:</b> Твердый переплет</p>
-<p><b>Вес в упаковке:</b> 1116г</p>
-<footer><p>&copy; <a href="https://github.com/kane52rus/Geek/tree/html/HTML">Andrey Tabunkin</a></p></footer>
+<ul>
+    <li><b>Название:</b> Почувствуй класс</li>
+    <li><b>Серия:</b> Отдельное издание</li>
+    <li><b>Тип:</b> Печатная книга</li>
+    <li><b>Издательство:</b> -</li>
+    <li><b>Язык издания:</b> Русский</li>
+    <li><b>Год выпуска:</b> 2017</li>
+    <li><b>Тип обложки:</b> Твердый переплет</li>
+    <li><b>Вес в упаковке:</b> 1116г</li>
+</ul>
+<hr>
+<footer><p>Все права защищены &copy; <a href="https://github.com/kane52rus/Geek/tree/html/HTML">Andrey Tabunkin</a></p></footer>
 </body>
 </html>
