--- a/HTML/contacts.html
+++ b/HTML/contacts.html
@@ -2,11 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Контакты</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Регистрация</title>
 </head>
 <body>
-    <h1>Контакты</h1>
-    <a href="index.html">Главная</a>
-    <a href="catalog/card1.html">Бестселлер</a>
+    <ul class="menu">
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="catalog.html">Каталог</a></li>
+        <li><a href="#">Контакты</a></li>
+    </ul>
+
+    <div class="contacts">
+        <div class="contact-form">
+            <h3>Контакты</h3>
+            <ul style="list-style: none">
+                <li>Телефон: +7(123)-456-7890</li>
+                <li>Адрес: г. Нижний Новгород, ул. Волжская набережная 22</li>
+                <li><script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A22cc585e23b87873c85591ba277e05fdcec118856ce4c4a453e5cf9469c377a3&amp;width=550&amp;height=300&amp;lang=ru_RU&amp;scroll=true"></script></li>
+            </ul>
+        </div>
+        <div class="contact-form">
+            <h3>Форма обратной связи</h3>
+            <form action="#">
+                Ваше Имя <br>
+                <input type="text" placeholder="Ваше имя" required><br>
+                Ваш телефон <br>
+                <input type="tel" placeholder="7(XXX)XXX-XX-XX" required> <br>
+                Ваш e-mail <br>
+                <input type="email" placeholder="example@example.com" required> <br>
+                <input type="submit" value="Отправить данные"> <input type="reset" value="Я передумал">
+            </form>
+        </div>
+    </div>
+    <hr>
+    <footer><p>Все права защищены &copy; <a href="https://github.com/kane52rus/Geek/tree/html/HTML">Andrey Tabunkin</a></p></footer>
 </body>
 </html>
