--- a/HTML/catalog/card2.html
+++ b/HTML/catalog/card2.html
@@ -4,40 +4,56 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
           name="viewport">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <title></title>
 </head>
 <body>
-<ul class="menu">
-    <li><a href="../index.html">Главная</a></li>
-    <li><a href="../catalog.html">Каталог</a></li>
-    <li><a href="../contacts.html">Контакты</a></li>
-</ul>
-<h1>Бертран Мейер. Почувствуй класс</h1>
-<hr>
-<a href="../img/book1.jpg" target="_blank"><img alt="Фотография книги" src="../img/book3.jpg" width="200"></a>
-<hr>
-<h3>Краткое описание</h3>
-<p>Эту книгу определённо стоит прочесть каждому программисту. Но в качестве основного языка программирования для примеров был взят Эйфель, что может вызывать некоторые затруднения. </p>
-<hr>
-<h3>Подробное описание:</h3>
-<p>В книге обобщен многолетний опыт обучения программированию в ЕТН, Цюрих. В ней удачно сочетаются три грани, характерные для профессионального программирования, - наука, искусство и инженерия. Она в первую очередь ориентирована на студентов, обучающихся в области информационных технологий, и их преподавателей, но представляет несомненный интерес для всех программистов, создающих программный продукт высокого качества.
-В книге излагаются основы объектно-ориентированного программирования (ООП). Особое внимание уделяется корректности программ за счет введения контрактов - предусловий, постусловий методов класса, инвариантов классов. Глубоко и подробно рассматриваются такие механизмы ООП, как наследование и универсальность. Изучаются алгоритмы и структуры данных - массивы, кортежи, списки, хэш-таблицы, различные виды распределителей, деревья. Подробно рассматриваются рекурсивные алгоритмы и рекурсивные структуры данных. Даются основы лямбда-исчисления и вводятся агенты, поддерживающие функциональный тип данных.
-Язык Eiffel используется как рабочий язык программирования. </p>
-<hr>
-<h3>Характеристики книги</h3>
-<ul>
-    <li><b>Название:</b> Почувствуй класс</li>
-    <li><b>Серия:</b> Отдельное издание</li>
-    <li><b>Тип:</b> Печатная книга</li>
-    <li><b>Издательство:</b> -</li>
-    <li><b>Язык издания:</b> Русский</li>
-    <li><b>Год выпуска:</b> 2017</li>
-    <li><b>Тип обложки:</b> Твердый переплет</li>
-    <li><b>Вес в упаковке:</b> 1116г</li>
-</ul>
-<hr>
+<header>
+    <ul class="menu">
+        <li><a href="../index.html">Главная</a></li>
+        <li><a href="../catalog.html">Каталог</a></li>
+        <li><a href="../contacts.html">Контакты</a></li>
+    </ul>
+</header>
+<div class="content">
+    <div class="card">
+        <h1>Бертран Мейер. Почувствуй класс</h1>
+        <hr>
+        <a href="../img/book2.jpg" target="_blank"><img alt="Фотография книги" src="../img/book2.jpg" width="200"></a>
+        <hr>
+        <h3>Краткое описание</h3>
+        <p class="card-info-small">Эту книгу определённо стоит прочесть каждому программисту. Но в качестве основного
+            языка программирования для примеров был взят Эйфель, что может вызывать некоторые затруднения. </p>
+        <hr>
+        <h3>Подробное описание:</h3>
+        <p class="card-info-full">В книге обобщен многолетний опыт обучения программированию в ЕТН, Цюрих. В ней удачно
+            сочетаются три грани, характерные для профессионального программирования, - наука, искусство и инженерия.
+            Она в первую очередь ориентирована на студентов, обучающихся в области информационных технологий, и их
+            преподавателей, но представляет несомненный интерес для всех программистов, создающих программный продукт
+            высокого качества.
+            В книге излагаются основы объектно-ориентированного программирования (ООП). Особое внимание уделяется
+            корректности программ за счет введения контрактов - предусловий, постусловий методов класса, инвариантов
+            классов. Глубоко и подробно рассматриваются такие механизмы ООП, как наследование и универсальность.
+            Изучаются алгоритмы и структуры данных - массивы, кортежи, списки, хэш-таблицы, различные виды
+            распределителей, деревья. Подробно рассматриваются рекурсивные алгоритмы и рекурсивные структуры данных.
+            Даются основы лямбда-исчисления и вводятся агенты, поддерживающие функциональный тип данных.
+            Язык Eiffel используется как рабочий язык программирования. </p>
+        <hr>
+        <h3>Характеристики книги</h3>
+        <ul>
+            <li><b>Название:</b> Почувствуй класс</li>
+            <li><b>Серия:</b> Отдельное издание</li>
+            <li><b>Тип:</b> Печатная книга</li>
+            <li><b>Издательство:</b> -</li>
+            <li><b>Язык издания:</b> Русский</li>
+            <li><b>Год выпуска:</b> 2017</li>
+            <li><b>Тип обложки:</b> Твердый переплет</li>
+            <li><b>Вес в упаковке:</b> 1116г</li>
+        </ul>
+        <hr>
+    </div>
+</div>
 <footer><p>Все права защищены &copy; <a href="https://github.com/kane52rus/Geek/tree/html/HTML">Andrey Tabunkin</a></p></footer>
 </body>
 </html>
