--- a/HTML/catalog/card1.html
+++ b/HTML/catalog/card1.html
@@ -4,49 +4,63 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
           name="viewport">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <title></title>
 </head>
 <body>
-<ul class="menu">
-    <li><a href="../index.html">Главная</a></li>
-    <li><a href="../catalog.html">Каталог</a></li>
-    <li><a href="../contacts.html">Контакты</a></li>
-</ul>
-<h1>Мэтт Вайсфельд. Объектно-ориентированное мышление</h1>
-<hr>
-<a href="../img/book1.jpg" target="_blank"><img alt="Фотография книги" src="../img/book1.jpg" width="200"></a>
-<hr>
-<h3>Краткое описание</h3>
-<p>Если вы освоили структурное программирование и только начинаете интересоваться объектами — то книга, безусловно,
-    полезна. Стоит отметить, что сам автор позиционирует эту книгу, как отправную точку для изучения ООП.</p>
-<hr>
-<h3>Подробное описание:</h3>
-<p>Объектно-ориентированное программирование - это фундамент современных языков программирования, включая C++, Java, C#,
-    Visual Basic, .NET, Ruby и Objective-C. Кроме того, объекты лежат в основе многих веб-технологий, например
-    JavaScript, Python и PHP.
-    Объектно-ориентированное программирование обеспечивает правильные методики проектирования, переносимость кода и его
-    повторное использование, однако для того, чтобы все это полностью понять, необходимо изменить свое мышление.
-    Разработчики, являющиеся новичками в сфере объектно-ориентированного программирования, не должны поддаваться
-    искушению перейти непосредственно к конкретному языку программирования (например, Objective-C, VB .NET, C++, C#,
-    .NET или Java) или моделирования (например, UML), а вместо этого сначала уделить время освоению того, что автор
-    книги Мэтт Вайсфельд называет объектно-ориентированным мышлением.
-    Несмотря на то, что технологии программирования изменяются и эволюционируют с годами, объектно-ориентированные
-    концепции остаются прежними - при этом неважно, какой именно является платформа.</p>
-<hr>
-<h3>Характеристики книги</h3>
-<ul>
-    <li><b>Название:</b> Объектно-ориентированное мышление</li>
-    <li><b>Серия:</b> Библиотека программиста</li>
-    <li><b>Тип:</b> Печатная книга</li>
-    <li>><b>Издательство:</b> Питер</li>
-    <li><b>Язык издания:</b> Русский</li>
-    <li><b>Год выпуска:</b> 2014</li>
-    <li><b>Тип обложки:</b> Мягкая обложка</li>
-    <li><b>Вес в упаковке:</b> 375г</li>
-</ul>
-<hr>
+<header>
+    <ul class="menu">
+        <li><a href="../index.html">Главная</a></li>
+        <li><a href="../catalog.html">Каталог</a></li>
+        <li><a href="../contacts.html">Контакты</a></li>
+    </ul>
+</header>
+<div class="content">
+    <div class="card">
+        <h1>Мэтт Вайсфельд. Объектно-ориентированное мышление</h1>
+        <hr>
+        <a href="../img/book1.jpg" target="_blank"><img alt="Фотография книги" src="../img/book1.jpg" width="200"></a>
+        <hr>
+        <h3>Краткое описание</h3>
+        <p class="card-info-small">Если вы освоили структурное программирование и только начинаете интересоваться объектами — то книга,
+            безусловно,
+            полезна. Стоит отметить, что сам автор позиционирует эту книгу, как отправную точку для изучения ООП.</p>
+        <hr>
+        <h3>Подробное описание:</h3>
+        <p class="card-info-full">Объектно-ориентированное программирование - это фундамент современных языков программирования, включая C++,
+            Java,
+            C#,
+            Visual Basic, .NET, Ruby и Objective-C. Кроме того, объекты лежат в основе многих веб-технологий, например
+            JavaScript, Python и PHP.
+            Объектно-ориентированное программирование обеспечивает правильные методики проектирования, переносимость
+            кода и
+            его
+            повторное использование, однако для того, чтобы все это полностью понять, необходимо изменить свое мышление.
+            Разработчики, являющиеся новичками в сфере объектно-ориентированного программирования, не должны поддаваться
+            искушению перейти непосредственно к конкретному языку программирования (например, Objective-C, VB .NET, C++,
+            C#,
+            .NET или Java) или моделирования (например, UML), а вместо этого сначала уделить время освоению того, что
+            автор
+            книги Мэтт Вайсфельд называет объектно-ориентированным мышлением.
+            Несмотря на то, что технологии программирования изменяются и эволюционируют с годами,
+            объектно-ориентированные
+            концепции остаются прежними - при этом неважно, какой именно является платформа.</p>
+        <hr>
+        <h3>Характеристики книги</h3>
+        <ul>
+            <li><b>Название:</b> Объектно-ориентированное мышление</li>
+            <li><b>Серия:</b> Библиотека программиста</li>
+            <li><b>Тип:</b> Печатная книга</li>
+            <li><b>Издательство:</b> Питер</li>
+            <li><b>Язык издания:</b> Русский</li>
+            <li><b>Год выпуска:</b> 2014</li>
+            <li><b>Тип обложки:</b> Мягкая обложка</li>
+            <li><b>Вес в упаковке:</b> 375г</li>
+        </ul>
+    </div>
+    <hr>
+</div>
     <footer><p>Все права защищены &copy; <a href="https://github.com/kane52rus/Geek/tree/html/HTML">Andrey Tabunkin</a></p></footer>
 </body>
 </html>
