--- a/HTML/catalog/card3.html
+++ b/HTML/catalog/card3.html
@@ -4,40 +4,52 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
           name="viewport">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <title></title>
 </head>
 <body>
-<ul class="menu">
-    <li><a href="../index.html">Главная</a></li>
-    <li><a href="../catalog.html">Каталог</a></li>
-    <li><a href="../contacts.html">Контакты</a></li>
-</ul>
-<h1>Гради Буч. Объектно-ориентированный анализ и проектирование с примерами приложений</h1>
-<hr>
-<a href="../img/book1.jpg" target="_blank"><img alt="Фотография книги" src="../img/book1.jpg" width="200"></a>
-<hr>
-<h3>Краткое описание</h3>
-<p>Книга не для начинающих, так как больше похожа на подведение итогов и теоретическое обоснование, чем практический самоучитель по объектно-ориентированному мышлению.</p>
-<hr>
-<h3>Подробное описание:</h3>
-<p>вторы описывают объектные методы решения сложных проблем, связанные с разработкой систем и программного обеспечения. Используя многочисленные примеры, они иллюстрируют основные концепции объектно-ориентированного подхода на примере разработки систем управления, сбора данных и искусственного интеллекта. Читатели найдут в книге практичные советы, касающиеся важных вопросов анализа, проектирования, реализации и оптимального управления проектами.
+<header>
+    <ul class="menu">
+        <li><a href="../index.html">Главная</a></li>
+        <li><a href="../catalog.html">Каталог</a></li>
+        <li><a href="../contacts.html">Контакты</a></li>
+    </ul>
+</header>
+<div class="content">
+    <div class="card">
+        <h1>Гради Буч. Объектно-ориентированный анализ и проектирование с примерами приложений</h1>
+        <hr>
+        <a href="../img/book3.jpg" target="_blank"><img alt="Фотография книги" src="../img/book3.jpg" width="200"></a>
+        <hr>
+        <h3>Краткое описание</h3>
+        <p class="card-info-small">Книга не для начинающих, так как больше похожа на подведение итогов и теоретическое
+            обоснование, чем практический самоучитель по объектно-ориентированному мышлению.</p>
+        <hr>
+        <h3>Подробное описание:</h3>
+        <p class="card-info-full">вторы описывают объектные методы решения сложных проблем, связанные с разработкой
+            систем и программного обеспечения. Используя многочисленные примеры, они иллюстрируют основные концепции
+            объектно-ориентированного подхода на примере разработки систем управления, сбора данных и искусственного
+            интеллекта. Читатели найдут в книге практичные советы, касающиеся важных вопросов анализа, проектирования,
+            реализации и оптимального управления проектами.
 
-Книга будет полезна системным аналитикам и архитекторам, программистам, преподавателям и студентам высших учебных заведений, а также всем специалистам по информационным технологиям.</p>
-<hr>
-<h3>Характеристики книги</h3>
-<ul>
-    <li><p><b>Название:</b> Объектно-ориентированное мышление</p></li>
-    <li><p><b>Серия:</b> -</p></li>
-    <li><p><b>Тип:</b> Отельное издание</p></li>
-    <li><p><b>Издательство:</b> Вильямс</p></li>
-    <li><p><b>Язык издания:</b> Русский</p></li>
-    <li><p><b>Год выпуска:</b> 2017</p></li>
-    <li><p><b>Тип обложки:</b> Твердый переплет</p></li>
-    <li><p><b>Вес в упаковке:</b> 1085г</p></li>
-</ul>
-<hr>
+            Книга будет полезна системным аналитикам и архитекторам, программистам, преподавателям и студентам высших
+            учебных заведений, а также всем специалистам по информационным технологиям.</p>
+        <hr>
+        <h3>Характеристики книги</h3>
+        <ul class="card-info-stats">
+            <li><b>Название:</b> Объектно-ориентированное мышление</li>
+            <li><b>Серия:</b> -</li>
+            <li><b>Тип:</b> Отдельное издание</li>
+            <li><b>Издательство:</b> Вильямс</li>
+            <li><b>Язык издания:</b> Русский</li>
+            <li><b>Год выпуска:</b> 2017</li>
+            <li><b>Тип обложки:</b> Твердый переплет</li>
+            <li><b>Вес в упаковке:</b> 1085г</li>
+        </ul>
+        <hr>
+    </div>
+</div>
 <footer><p>Все права защищены &copy; <a href="https://github.com/kane52rus/Geek/tree/html/HTML">Andrey Tabunkin</a></p></footer>
 </body>
 </html>
