--- a/HTML/catalog/card2.html
+++ b/HTML/catalog/card2.html
@@ -10,11 +10,12 @@
 </head>
 <body>
 <header>
-    <ul class="menu">
-        <li><a href="../index.html">Главная</a></li>
-        <li><a href="../catalog.html">Каталог</a></li>
-        <li><a href="../contacts.html">Контакты</a></li>
-    </ul>
+        <div class="logo"></div>
+        <ul class="menu">
+            <li><a href="../index.html">Главная</a></li>
+            <li><a href="../catalog.html">Каталог</a></li>
+            <li><a href="../contacts.html">Контакты</a></li>
+        </ul>
 </header>
 <div class="content">
     <div class="card">
@@ -40,17 +41,41 @@
             Даются основы лямбда-исчисления и вводятся агенты, поддерживающие функциональный тип данных.
             Язык Eiffel используется как рабочий язык программирования. </p>
         <hr>
-        <h3>Характеристики книги</h3>
-        <ul>
-            <li><b>Название:</b> Почувствуй класс</li>
-            <li><b>Серия:</b> Отдельное издание</li>
-            <li><b>Тип:</b> Печатная книга</li>
-            <li><b>Издательство:</b> -</li>
-            <li><b>Язык издания:</b> Русский</li>
-            <li><b>Год выпуска:</b> 2017</li>
-            <li><b>Тип обложки:</b> Твердый переплет</li>
-            <li><b>Вес в упаковке:</b> 1116г</li>
-        </ul>
+        <table class="card-info-stats">
+            <th><h3>Характеристики книги</h3></th>
+            <tr>
+                <td><b>Название:</b></td>
+                <td>Почувствуй класс</td>
+            </tr>
+            <tr>
+                <td><b>Серия:</b></td>
+                <td>Отдельное издание</td>
+            </tr>
+            <tr>
+                <td><b>Тип:</b></td>
+                <td>Печатная книга</td>
+            </tr>
+            <tr>
+                <td><b>Издательство:</b></td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td><b>Язык издания:</b></td>
+                <td>Русский</td>
+            </tr>
+            <tr>
+                <td><b>Год выпуска:</b></td>
+                <td>2017</td>
+            </tr>
+            <tr>
+                <td><b>Тип обложки:</b></td>
+                <td>Твердый переплет</td>
+            </tr>
+            <tr>
+                <td><b>Вес в упаковке:</b></td>
+                <td>1116г</td>
+            </tr>
+        </table>
         <hr>
     </div>
 </div>
