--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <header>
+        <div class="logo"></div>
         <ul class="menu">
             <li><a href="#">Главная</a></li>
             <li><a href="catalog.html">Каталог</a></li>
@@ -17,6 +18,21 @@
     <h1>eBookShop</h1>
     <h3>Добро пожаловать в интернет-магазин электронных книг eBookShop</h3>
     <hr>
+
+    <table class="table">
+        <tr>
+            <td rowspan="2">1</td>
+            <td colspan="2">2</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td rowspan="2">4</td>
+        </tr>
+        <tr>
+            <td colspan="2">5</td>
+
+        </tr>
+    </table>
     <footer><p>Все права защищены &copy; <a href="https://github.com/kane52rus/Geek/tree/html/HTML">Andrey Tabunkin</a></p></footer>
 </body>
 </html>
