--- a/HTML/catalog.html
+++ b/HTML/catalog.html
@@ -6,11 +6,14 @@
     <title>Каталог</title>
 </head>
 <body>
+<header>
+    <div class="logo"></div>
     <ul class="menu">
         <li><a href="index.html">Главная</a></li>
         <li><a href="#">Каталог</a></li>
         <li><a href="contacts.html">Контакты</a></li>
     </ul>
+</header>
     <hr>
     <div class="content">
         <h1>Каталог</h1>
