--- a/HTML/catalog/card1.html
+++ b/HTML/catalog/card1.html
@@ -10,11 +10,12 @@
 </head>
 <body>
 <header>
-    <ul class="menu">
-        <li><a href="../index.html">Главная</a></li>
-        <li><a href="../catalog.html">Каталог</a></li>
-        <li><a href="../contacts.html">Контакты</a></li>
-    </ul>
+        <div class="logo"></div>
+        <ul class="menu">
+            <li><a href="../index.html">Главная</a></li>
+            <li><a href="../catalog.html">Каталог</a></li>
+            <li><a href="../contacts.html">Контакты</a></li>
+        </ul>
 </header>
 <div class="content">
     <div class="card">
@@ -47,17 +48,41 @@
             объектно-ориентированные
             концепции остаются прежними - при этом неважно, какой именно является платформа.</p>
         <hr>
-        <h3>Характеристики книги</h3>
-        <ul>
-            <li><b>Название:</b> Объектно-ориентированное мышление</li>
-            <li><b>Серия:</b> Библиотека программиста</li>
-            <li><b>Тип:</b> Печатная книга</li>
-            <li><b>Издательство:</b> Питер</li>
-            <li><b>Язык издания:</b> Русский</li>
-            <li><b>Год выпуска:</b> 2014</li>
-            <li><b>Тип обложки:</b> Мягкая обложка</li>
-            <li><b>Вес в упаковке:</b> 375г</li>
-        </ul>
+        <table class="card-info-stats">
+            <th><h3>Характеристики книги</h3></th>
+            <tr>
+                <td><b>Название:</b></td>
+                <td>Объектно-ориентированное мышление</td>
+            </tr>
+            <tr>
+                <td><b>Серия:</b></td>
+                <td>Библиотека программиста</td>
+            </tr>
+            <tr>
+                <td><b>Тип:</b></td>
+                <td>Печатная книга</td>
+            </tr>
+            <tr>
+                <td><b>Издательство:</b></td>
+                <td>Питер</td>
+            </tr>
+            <tr>
+                <td><b>Язык издания:</b></td>
+                <td>Русский</td>
+            </tr>
+            <tr>
+                <td><b>Год выпуска:</b></td>
+                <td>2014</td>
+            </tr>
+            <tr>
+                <td><b>Тип обложки:</b></td>
+                <td>Мягкая обложка</td>
+            </tr>
+            <tr>
+                <td><b>Вес в упаковке:</b></td>
+                <td>375г</td>
+            </tr>
+        </table>
     </div>
     <hr>
 </div>
