--- a/HTML/contacts.html
+++ b/HTML/contacts.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <header>
+    <div class="logo"></div>
     <ul class="menu">
         <li><a href="index.html">Главная</a></li>
         <li><a href="catalog.html">Каталог</a></li>
