--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,8 +6,9 @@
     <title>Главная страница</title>
 </head>
 <body>
+<div class="container">
     <header>
-        <div class="logo"></div>
+        <div class="logo"><img src="img/kane_logotip.png" alt=""></div>
         <ul class="menu">
             <li><a href="#">Главная</a></li>
             <li><a href="catalog.html">Каталог</a></li>
@@ -33,6 +34,10 @@
 
         </tr>
     </table>
-    <footer><p>Все права защищены &copy; <a href="https://github.com/kane52rus/Geek/tree/html/HTML">Andrey Tabunkin</a></p></footer>
+    <footer>
+        <div class="copyright"><p>Все права защищены &copy; <a href="https://github.com/kane52rus/Geek/tree/html/HTML">Andrey
+            Tabunkin</a></p></div>
+    </footer>
+</div>
 </body>
 </html>
