--- a/HTML/catalog.html
+++ b/HTML/catalog.html
@@ -6,14 +6,15 @@
     <title>Каталог</title>
 </head>
 <body>
-<header>
-    <div class="logo"></div>
-    <ul class="menu">
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="#">Каталог</a></li>
-        <li><a href="contacts.html">Контакты</a></li>
-    </ul>
-</header>
+<div class="container">
+    <header>
+        <div class="logo"><img src="img/kane_logotip.png" alt=""></div>
+        <ul class="menu">
+            <li><a href="index.html">Главная</a></li>
+            <li><a href="#">Каталог</a></li>
+            <li><a href="contacts.html">Контакты</a></li>
+        </ul>
+    </header>
     <hr>
     <div class="content">
         <h1>Каталог</h1>
@@ -33,6 +34,8 @@
         </div>
     </div>
     <hr>
-    <footer><p>Все права защищены &copy; <a href="https://github.com/kane52rus/Geek/tree/html/HTML">Andrey Tabunkin</a></p></footer>
+    <footer><div class="copyright"><p>Все права защищены &copy; <a href="https://github.com/kane52rus/Geek/tree/html/HTML">Andrey
+            Tabunkin</a></p></div></footer>
+</div>
 </body>
 </html>
