--- a/HTML/catalog/card3.html
+++ b/HTML/catalog/card3.html
@@ -9,72 +9,87 @@
     <title></title>
 </head>
 <body>
-<header>
-        <div class="logo"></div>
-        <ul class="menu">
-            <li><a href="../index.html">Главная</a></li>
-            <li><a href="../catalog.html">Каталог</a></li>
-            <li><a href="../contacts.html">Контакты</a></li>
-        </ul>
-</header>
-<div class="content">
+<div class="container">
+    <header>
+            <div class="logo"><img src="../img/kane_logotip.png" alt=""></div>
+            <ul class="menu">
+                <li><a href="../index.html">Главная</a></li>
+                <li><a href="../catalog.html">Каталог</a></li>
+                <li><a href="../contacts.html">Контакты</a></li>
+            </ul>
+    </header>
+    <h1>Гради Буч. Объектно-ориентированный анализ и проектирование с примерами приложений</h1>
     <div class="card">
-        <h1>Гради Буч. Объектно-ориентированный анализ и проектирование с примерами приложений</h1>
-        <hr>
-        <a href="../img/book3.jpg" target="_blank"><img alt="Фотография книги" src="../img/book3.jpg" width="200"></a>
-        <hr>
-        <h3>Краткое описание</h3>
-        <p class="card-info-small">Книга не для начинающих, так как больше похожа на подведение итогов и теоретическое
-            обоснование, чем практический самоучитель по объектно-ориентированному мышлению.</p>
-        <hr>
-        <h3>Подробное описание:</h3>
-        <p class="card-info-full">вторы описывают объектные методы решения сложных проблем, связанные с разработкой
-            систем и программного обеспечения. Используя многочисленные примеры, они иллюстрируют основные концепции
-            объектно-ориентированного подхода на примере разработки систем управления, сбора данных и искусственного
-            интеллекта. Читатели найдут в книге практичные советы, касающиеся важных вопросов анализа, проектирования,
-            реализации и оптимального управления проектами.
+        <div class="card-info">
+            <div class="card-img">
+                <a href="../img/book3.jpg" target="_blank">
+                    <img alt="Фотография книги" src="../img/book3.jpg" width="200"></a>
+            </div>
+            <div class="card-button">
+                    <input type="submit" value="Купить">
+            </div>
+        </div>
+        <div class="card-info">
+            <div class="item-info">
+                <h3>Краткое описание</h3>
+                <p class="card-info-small">Книга не для начинающих, так как больше похожа на подведение итогов и теоретическое
+                    обоснование, чем практический самоучитель по объектно-ориентированному мышлению.</p>
+            </div>
+            <div class="item-info"><h3>Подробное описание</h3>
+                <p class="card-info-full">Авторы описывают объектные методы решения сложных проблем, связанные с
+                    разработкой
+                    систем и программного обеспечения. Используя многочисленные примеры, они иллюстрируют основные
+                    концепции
+                    объектно-ориентированного подхода на примере разработки систем управления, сбора данных и
+                    искусственного
+                    интеллекта. Читатели найдут в книге практичные советы, касающиеся важных вопросов анализа,
+                    проектирования,
+                    реализации и оптимального управления проектами.
 
-            Книга будет полезна системным аналитикам и архитекторам, программистам, преподавателям и студентам высших
-            учебных заведений, а также всем специалистам по информационным технологиям.</p>
-        <hr>
-        <table class="card-info-stats">
-            <th><h3>Характеристики книги</h3></th>
-            <tr>
-                <td><b>Название:</b></td>
-                <td>Объектно-ориентированное мышление</td>
-            </tr>
-            <tr>
-                <td><b>Серия:</b></td>
-                <td>-</td>
-            </tr>
-            <tr>
-                <td><b>Тип:</b></td>
-                <td>Отдельное издание</td>
-            </tr>
-            <tr>
-                <td><b>Издательство:</b></td>
-                <td>Вильямс</td>
-            </tr>
-            <tr>
-                <td><b>Язык издания:</b></td>
-                <td>Русский</td>
-            </tr>
-            <tr>
-                <td><b>Год выпуска:</b></td>
-                <td>2017</td>
-            </tr>
-            <tr>
-                <td><b>Тип обложки:</b></td>
-                <td>Твердый переплет</td>
-            </tr>
-            <tr>
-                <td><b>Вес в упаковке:</b></td>
-                <td>1085г</td>
-            </tr>
-        </table>
-        <hr>
+                    Книга будет полезна системным аналитикам и архитекторам, программистам, преподавателям и студентам
+                    высших
+                    учебных заведений, а также всем специалистам по информационным технологиям.</p>
+            </div>
+             <div class="item-info">
+                <table class="card-info-stats">
+                <th><h3>Характеристики книги</h3></th>
+                <tr>
+                    <td><b>Название:</b></td>
+                    <td>Объектно-ориентированное мышление</td>
+                </tr>
+                <tr>
+                    <td><b>Серия:</b></td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td><b>Тип:</b></td>
+                    <td>Отдельное издание</td>
+                </tr>
+                <tr>
+                    <td><b>Издательство:</b></td>
+                    <td>Вильямс</td>
+                </tr>
+                <tr>
+                    <td><b>Язык издания:</b></td>
+                    <td>Русский</td>
+                </tr>
+                <tr>
+                    <td><b>Год выпуска:</b></td>
+                    <td>2017</td>
+                </tr>
+                <tr>
+                    <td><b>Тип обложки:</b></td>
+                    <td>Твердый переплет</td>
+                </tr>
+                <tr>
+                    <td><b>Вес в упаковке:</b></td>
+                    <td>1085г</td>
+                </tr>
+                </table>
+             </div>
+        </div>
     </div>
-</div>
-<footer><p>Все права защищены &copy; <a href="https://github.com/kane52rus/Geek/tree/html/HTML">Andrey Tabunkin</a></p></footer>
+    <footer><div class="copyright"><p>Все права защищены &copy; <a href="https://github.com/kane52rus/Geek/tree/html/HTML">Andrey
+            Tabunkin</a></p></div></footer></div>
 </body>
 </html>
