--- a/HTML/contacts.html
+++ b/HTML/contacts.html
@@ -6,38 +6,41 @@
     <title>Регистрация</title>
 </head>
 <body>
-<header>
-    <div class="logo"></div>
-    <ul class="menu">
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="catalog.html">Каталог</a></li>
-        <li><a href="#">Контакты</a></li>
-    </ul>
-</header>
-<div class="content">
-    <div class="contacts">
-        <div class="contact-form">
-            <h3>Контакты</h3>
-             Телефон: +7(123)-456-7890 <br>
-             Адрес: г. Нижний Новгород, ул. Волжская набережная 22
-                    <script type="text/javascript" charset="utf-8" async
-                            src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A22cc585e23b87873c85591ba277e05fdcec118856ce4c4a453e5cf9469c377a3&amp;width=550&amp;height=300&amp;lang=ru_RU&amp;scroll=true"></script>
-        </div>
-        <div class="contact-form">
-            <h3>Форма обратной связи</h3>
-            <form class="callback" action="#">
-                Ваше Имя <br>
-                <input type="text" placeholder="Ваше имя" required><br>
-                Ваш телефон <br>
-                <input type="tel" placeholder="7(XXX)XXX-XX-XX" required> <br>
-                Ваш e-mail <br>
-                <input type="email" placeholder="example@example.com" required> <br><br>
-                <input type="submit" value="Отправить данные">
-            </form>
+<div class="container">
+    <header>
+        <div class="logo"><img src="img/kane_logotip.png" alt=""></div>
+        <ul class="menu">
+            <li><a href="index.html">Главная</a></li>
+            <li><a href="catalog.html">Каталог</a></li>
+            <li><a href="#">Контакты</a></li>
+        </ul>
+    </header>
+    <div class="content">
+        <div class="contacts">
+            <div class="contact-form">
+                <h3>Контакты</h3>
+                Телефон: +7(123)-456-7890 <br>
+                Адрес: г. Нижний Новгород, ул. Волжская набережная 22
+                <script type="text/javascript" charset="utf-8" async
+                        src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A22cc585e23b87873c85591ba277e05fdcec118856ce4c4a453e5cf9469c377a3&amp;width=550&amp;height=300&amp;lang=ru_RU&amp;scroll=true"></script>
+            </div>
+            <div class="contact-form">
+                <h3>Форма обратной связи</h3>
+                <form class="callback" action="#">
+                    Ваше Имя <br>
+                    <input type="text" placeholder="Ваше имя" required><br>
+                    Ваш телефон <br>
+                    <input type="tel" placeholder="7(XXX)XXX-XX-XX" required> <br>
+                    Ваш e-mail <br>
+                    <input type="email" placeholder="example@example.com" required> <br><br>
+                    <input type="submit" value="Отправить данные">
+                </form>
+            </div>
         </div>
     </div>
-</div>
     <hr>
-    <footer><p>Все права защищены &copy; <a href="https://github.com/kane52rus/Geek/tree/html/HTML">Andrey Tabunkin</a></p></footer>
+    <footer><div class="copyright"><p>Все права защищены &copy; <a href="https://github.com/kane52rus/Geek/tree/html/HTML">Andrey
+            Tabunkin</a></p></div></footer>
+</div>
 </body>
 </html>
